# Principios_de_Sistemas_Operativos-Proyecto2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  Readme.md  docker-compose.yml
Video/: Drive.txt
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  logging.rs
data/: cache_test.csv  failure_test.csv  input.csv  metrics_test.csv  parallel_test.csv  products.csv  sales.csv
master/: Cargo.toml
master/src/: job_metrics.rs  main.rs  persistence.rs
results/: benchmark_1m.json  benchmark_1m_metrics.json  benchmark_1m_report.txt  benchmark_1m_stages.json  system_metrics.json
scripts/: benchmark_1m.sh  docker-demo.sh  docker-fault-test.sh  run_tests.sh  test_cache.sh  test_client_metrics.sh  test_e2e_multinode_join.sh  test_e2e_multinode_wc.sh  test_failures.sh  test_fault_tolerance.sh  test_load_balancing.sh  test_metrics.sh  test_parallel_tasks.sh  test_quick.sh  test_round_robin.sh  test_single_node.sh
worker/: Cargo.toml  persistence.rs
worker/src/: cache.rs  main.rs  metrics.rs  operators.rs
