[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] } # Runtime async of Rust
serde = { version = "1", features = ["derive"] } # Serialization and deserialization library
serde_json = "1" # JSON serialization and deserialization library
reqwest = { version = "0.12", features = ["json", "rustls-tls"] } # HTTP client library
axum = "0.7" # Web framework for building HTTP services
uuid  = { version = "1", features = ["v4", "serde"] } # Universally Unique Identifier library
common = { path = "../common" }
